log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes: # Define volume
        - name: shared-log
          emptyDir: {}
      containers:
        - name: log-generator
          image: duysmartum/log-generator:1.10.1
          imagePullPolicy: Always
          volumeMounts: # Mount volume
            - name: shared-log
              mountPath: /usr/src/app/files
        - name: log-reader
          image: duysmartum/log-reader:1.10.1
          imagePullPolicy: Always
          volumeMounts: # Mount volume
            - name: shared-log
              mountPath: /usr/src/app/files
